--- a/app/src/main/res/layout/casa.xml
+++ b/app/src/main/res/layout/casa.xml
@@ -118,6 +118,17 @@
         app:layout_constraintStart_toStartOf="@+id/button7"
         app:layout_constraintTop_toTopOf="@+id/button7"
         app:layout_constraintVertical_bias="0.805" />
+    <View
+        android:id="@+id/view6"
+        android:layout_width="145dp"
+        android:layout_height="22dp"
+        android:background="@drawable/rounded_background"
+        app:layout_constraintBottom_toBottomOf="@+id/view4"
+        app:layout_constraintEnd_toEndOf="@+id/button8"
+        app:layout_constraintHorizontal_bias="0.522"
+        app:layout_constraintStart_toStartOf="@+id/button8"
+        app:layout_constraintTop_toTopOf="@+id/button8"
+        app:layout_constraintVertical_bias="0.805" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rec"
