--- a/app/src/main/res/layout/mispublicaciones.xml
+++ b/app/src/main/res/layout/mispublicaciones.xml
@@ -2,12 +2,11 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/guardado"
+    android:id="@+id/mispublicaciones"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/white"
-    tools:context=".Guardado">
-
+    tools:context=".MisPublicaciones">
     <View
         android:id="@+id/view"
         android:layout_width="match_parent"
@@ -45,6 +44,5 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/view"
         app:layout_constraintVertical_bias="0.647" />
-
 
 </androidx.constraintlayout.widget.ConstraintLayout>
