--- a/app/src/main/res/layout/agregar.xml
+++ b/app/src/main/res/layout/agregar.xml
@@ -132,22 +132,24 @@
         app:layout_constraintHeight_percent="0.1"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.937"
+        app:layout_constraintVertical_bias="0.934"
         app:layout_constraintWidth_percent="0.4"
         app:strokeWidth="1dp" />
 
-    <ImageView
-        android:id="@+id/imagenSeleccionada"
-        android:layout_width="227dp"
-        android:layout_height="121dp"
+    <ImageButton
+        android:id="@+id/mostrar"
+        android:layout_width="241dp"
+        android:layout_height="129dp"
         android:background="@color/gris"
+        android:contentDescription="Seleccionar imagen"
+        android:scaleType="centerCrop"
         android:src="@drawable/ic_launcher_foreground"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.743" />
+        app:layout_constraintVertical_bias="0.76" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
