--- a/app/src/main/res/layout/publicacion.xml
+++ b/app/src/main/res/layout/publicacion.xml
@@ -192,5 +192,20 @@
         app:layout_constraintTop_toBottomOf="@+id/textViewCorreo"
         app:layout_constraintVertical_bias="0.0" />
 
+    <ImageButton
+        android:id="@+id/mostrar"
+        android:layout_width="143dp"
+        android:layout_height="91dp"
+        android:background="@color/gris"
+        android:contentDescription="Seleccionar imagen"
+        android:scaleType="centerCrop"
+        android:src="@drawable/ic_launcher_foreground"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.25"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.32" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
